Redesigning the campaign webpage completely

--- a/index.html
+++ b/index.html
@@ -8,12 +8,96 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="sass/output.css">
 </head>
-<body>
-<h1 class="bg-primary">HELLO WORLD</h1>
+<body class="bg-secondary">
+  <div class="jumbotron">
 
+    </div>
+  <!--  <div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="https://usercontent1.hubstatic.com/13717754_f520.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">My story</h5>
+    <p class="card-text">My name is Lelouch vi Britannia and many of you may know me as Lelouch of the Rebellion from my famous tv show Code Geass which documented my success in overthrowing our corrupt government. All that aside, I am a family man now and I am also running for Constable right here in Fayette County District 1. I will no longer be leading any more Coup de </p>
+  </div>
+</div>
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+  </div> -->
+
+  <div class="container">
+  <div class="row">
+
+    <div class="col-xl-4 page-header"><h1>Lelouch vi Britannia A.K.A Lelouch of the Rebellion <h3><small>Bringing order and peace to Fayette County District 1</small></h3></h1>
+    </div>
+  <div class="row">
+    <div class="col-6 col-md-4 bg-primary">
+      <h4>My Purpose</h4>
+      <p>My name is Lelouch vi Britannia and many of you may know me as
+        Lelouch of the Rebellion from my famous tv show Code Geass which
+        documented my success in overthrowing our corrupt government.
+        All that aside, I am a family man now and I am also running for
+        Constable right here in Fayette County District 1. I will no longer be
+        leading any more coup d'etats.</p>
+    <div class="col-6 col-md-4"><div class="card" style="width: 18rem;">
+<img class="card-img-top" src="https://usercontent1.hubstatic.com/13717754_f520.jpg" alt="Card image cap">
+<div class="card-body">
+  <h5 class="card-title">My Expertise</h5>
+  <p class="card-text">My main plan of action for bringing peace to our community
+    involves the use of Geass, also known as the King's Power. With this power,
+    I will be able to persuade any criminal to walk the straight and narrow,
+    no matter how hardened he is in his life of crime. It will only work once,
+    so if they are somehow able to break free then do not fear, I have Plan B!</p>
+    <a href="https://en.wikipedia.org/wiki/Lelouch_Lamperouge#Abilities" target="_blank" class="btn btn-dark">Learn more about Geass</a>
+</div>
+</div>
+</div>
+    <div class="col-6 col-md-4"><div class="card" style="width: 18rem;">
+<img class="card-img-top" src="https://static.zerochan.net/CODE.GEASS%3A.Hangyaku.no.Lelouch.full.1361498.jpg" alt="Card image cap">
+<div class="card-body">
+  <h5 class="card-title">Plan B</h5>
+  <p class="card-text">Unlike my power of Geass, I do have a skill that took many
+    years to perfect and I believe it will greatly benefit this community.
+    My skill and grace with operating the extremely high-tech Knightmare robots
+    will keep our streets safe. With enough funding I would be able to implement a
+    training program for our police force so that our Men in Blue will no longer
+    face any danger.</p>
+    <a href="http://codegeass.wikia.com/wiki/Knightmare_Frame" class="btn btn-dark">Learn more about Knightmares</a>
+</div>
+</div>
+</div>
+  </div>
+  <div class="col-12 col-md-8 bg-danger"><h4 class="text-justify">My Promise to Fayette County</h4>
+    <p>All impressive skills aside, my role in this community will be much more
+      than bringing criminals to justice and related activities.
+      A large portion of my time would be spent helping to build and improve on
+      this community. With my past government experience, I can bring us to a higher
+      level of economic bliss. Coming from a family which is headed by my father ,
+      Charles zi Britannia, who is the 98th emperor of Britannia, I would know more than
+      anyone what it takes to reach a state of wealth that will last.<p>
+
+  <div class="col-6 col-md-4">  <div class="card" style="width: 18rem;">
+    <a href="https://www.fayettecountyclerk.com/web/elections/voterregistration.htm"><img class="card-img-top" src="https://mediaprocessor.websimages.com/width/200/crop/0,0,200x145/www.mcnabbforconstable.com/vote.jpg" alt="Card image cap"></a>
+    <div class="card-body">
+    <h5 class="card-title">Not registered to vote?</h5>
+    <p class="card-text">Click the image above to be directed to where you can find the voters registration!</p>
+    </div>
+  </div>
+<!--above are some nested columns-->
+</div>
+
+  </div>
+</div>
+</div>
+</div>
+</div>
 </body>
-
-
 
 
 
