cleaned up some files and removed a forgotton commented out code

--- a/index.html
+++ b/index.html
@@ -12,24 +12,7 @@
   <div class="jumbotron">
 
     </div>
-  <!--  <div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <div class="card" style="width: 18rem;">
-  <img class="card-img-top" src="https://usercontent1.hubstatic.com/13717754_f520.jpg" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">My story</h5>
-    <p class="card-text">My name is Lelouch vi Britannia and many of you may know me as Lelouch of the Rebellion from my famous tv show Code Geass which documented my success in overthrowing our corrupt government. All that aside, I am a family man now and I am also running for Constable right here in Fayette County District 1. I will no longer be leading any more Coup de </p>
-  </div>
-</div>
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-    <div class="col-sm">
-      One of three columns
-    </div>
-  </div> -->
+    <div class="jumbtron">
 
   <div class="container">
   <div class="row">
