--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       <link rel="stylesheet" href="sass/output.css">
 </head>
 <body class="bg-secondary">
+  <iframe src="music/01.COLORS.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
+  <audio id="player" autoplay loop>
+    <source src="music/01.COLORS.mp3" type="audio/mp3">
+</audio>
+
   <div class="jumbotron">
 
     </div>
@@ -80,6 +85,7 @@
 </div>
 </div>
 </div>
+<script src="jsplayground/main.js"></script>
 </body>
 
 
