--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
       <link rel="stylesheet" href="sass/output.css">
 </head>
 <body class="bg-secondary">
-  <iframe src="music/01.COLORS.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
-  <audio id="player" autoplay loop>
-    <source src="music/01.COLORS.mp3" type="audio/mp3">
-</audio>
-
-  <div class="jumbotron">
-
-    </div>
-    <div class="jumbtron">
+<div class="jumbotron"></div>
 
   <div class="container">
   <div class="row">
