changing target of button links

--- a/campaign.html
+++ b/campaign.html
@@ -34,7 +34,7 @@
     I will be able to persuade any criminal to walk the straight and narrow,
     no matter how hardened he is in his life of crime. It will only work once,
     so if they are somehow able to break free then do not fear, I have Plan B!</p>
-    <a href="https://en.wikipedia.org/wiki/Lelouch_Lamperouge#Abilities" target="_blank" class="btn btn-dark">Learn more about Geass</a>
+    <a target="_blank" href="https://en.wikipedia.org/wiki/Lelouch_Lamperouge#Abilities" target="_blank" class="btn btn-dark">Learn more about Geass</a>
 </div>
 </div>
 </div>
@@ -48,7 +48,7 @@
     will keep our streets safe. With enough funding I would be able to implement a
     training program for our police force so that our Men in Blue will no longer
     face any danger.</p>
-    <a href="http://codegeass.wikia.com/wiki/Knightmare_Frame" class="btn btn-dark">Learn more about Knightmares</a>
+    <a target="_blank" href="http://codegeass.wikia.com/wiki/Knightmare_Frame" class="btn btn-dark">Learn more about Knightmares</a>
 </div>
 </div>
 </div>
@@ -63,7 +63,7 @@
       anyone what it takes to reach a state of wealth that will last.<p>
 
   <div class="col-6 col-md-4">  <div class="card" style="width: 18rem;">
-    <a href="https://www.fayettecountyclerk.com/web/elections/voterregistration.htm"><img class="card-img-top" src="https://mediaprocessor.websimages.com/width/200/crop/0,0,200x145/www.mcnabbforconstable.com/vote.jpg" alt="Card image cap"></a>
+    <a target="_blank" href="https://www.fayettecountyclerk.com/web/elections/voterregistration.htm"><img class="card-img-top" src="https://mediaprocessor.websimages.com/width/200/crop/0,0,200x145/www.mcnabbforconstable.com/vote.jpg" alt="Card image cap"></a>
     <div class="card-body">
     <h5 class="card-title">Not registered to vote?</h5>
     <p class="card-text">Click the image above to be directed to where you can find the voters registration!</p>
