--- a/campaign.html
+++ b/campaign.html
@@ -14,7 +14,7 @@
   <div class="container">
   <div class="row">
 
-    <div class="col-xl-4 page-header"><h1>Lelouch vi Britannia A.K.A Lelouch of the Rebellion <h3><small>Bringing order and peace to Fayette County District 1</small></h3></h1>
+    <div class="col-12 page-header"><h1>Lelouch vi Britannia A.K.A Lelouch of the Rebellion <h3><small>Bringing order and peace to Fayette County District 1</small></h3></h1>
     </div>
   <div class="row">
     <div class="col-6 col-md-4 bg-primary">
@@ -77,7 +77,7 @@
 </div>
 </div>
 </div>
-<script src="jsplayground/main.js"></script>
+<script src="main.js"></script>
 </body>
 
 
